k8s/backEnd.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: exam
spec:
  selector:
    app: backend
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: exam
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: safwaneg/spring-app-2:latest
          ports:
            - containerPort: 8080
              name: backend-port
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            exec:
              command:
                - touch
                - /tmp/healthy
            failureThreshold: 30
