k8s/frontEnd.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: exam
spec:
  ports:
    - port: 8081
      protocol: TCP
      targetPort: 80
  selector:
    app: frontend
  type: NodePort

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: exam

spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: safwaneg/angular-app-2:latest
          ports:
            - containerPort: 80
              name: http-port
          livenessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
            initialDelaySeconds: 10
            periodSeconds: 15
          readinessProbe:
            exec:
              command:
                - cat
                - /tmp/healthy
            initialDelaySeconds: 5
            periodSeconds: 10
          startupProbe:
            exec:
              command:
                - touch
                - /tmp/healthy
            failureThreshold: 30
